# bitrixdock

./: .prettierrc  README.md
.github/workflows/: ci.yml
python/: pyproject.toml  requirements-dev.txt  requirements.txt
python/tests/: test_client.py
typescript/: .eslintrc.js  jest.config.js  jest.setup.ts  package.json  tsconfig.json
typescript/src/__tests__/: client.test.ts
